--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ToDos</title>
+    <title>ToDo</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- don't use this in production: -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
 
-    <h1>ToDos</h1>
+    <h1>ToDo</h1>
 
     <!-- we will put our teact component inside this div -->
     <div id="root"></div>
