--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ToDo</title>
+
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- don't use this in production: -->
@@ -20,6 +21,7 @@
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
 
     <!-- load our react component. -->
+    <script src="form.js" defer type="text/babel"></script>    
     <script src="index.js" defer type="text/babel"></script>
 
 
